k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-backend
spec:
  selector:
    app: calculator-backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: calculator-frontend
spec:
  selector:
    app: calculator-frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
